# learning01

RAGapplication/: hello.py  pyproject.toml
RAGapplication/src/langgraph/lesson1/: part1.py  part2.py  part3.py  part4.py  part5.py  readme.md
learning/: pyproject.toml
learning/notebooks/: command.ipynb  dynamic.ipynb  main.ipynb  rag.ipynb
learning/tests/: code_to_test.py
learning/tests/test/: conftest.py
learning/tests/test/nodes/: test_llm_node.py
